# LoReHyPar

./: .gitignore  1.py  2.py  CMakeLists.txt  LSHConstants.hpp  LSHConstantsGen.cpp  Louvain.hpp  README.md  build.sh  case02.md  case03.md  case04.md  coarsen.cpp  contract.cpp  debug.sh  debug1.sh  evaluate.sh  fastcoarsen.cpp  fastdebug.sh  fastpreprocess.cpp  fastrefine.cpp  funcs.cpp  funcs.hpp  hypar.cpp  hypar.hpp  initialpar.cpp  main.cpp  pinnum.md  preprocess.cpp  refine.cpp  run.sh  runmanytimes.sh  runmt.sh  savecoarsen.cpp  saveinitialpar.cpp  savepreprocess.cpp  saverefine.cpp  subHyPar.cpp  subHyPar.hpp  test.cpp  (+6 more)
evaluator/: evaluator
testcase/case05/: design.are  design.info  design.net  design.topo
技术报告/: lorehypar.drawio  技术报告.md
